[gd_scene load_steps=4 format=3 uid="uid://61m51j7a007w"]

[ext_resource type="Script" uid="uid://c42gvtg0cyhlj" path="res://pet_old.gd" id="1_pa7gm"]
[ext_resource type="Texture2D" uid="uid://hyuu72u4l7fd" path="res://pet_assets/flyMan_still_stand.png" id="2_h6co6"]
[ext_resource type="Script" uid="uid://bhdgai321eek8" path="res://behaviour.gd" id="2_ovmnc"]

[node name="Pet_old" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_pa7gm")

[node name="Behaviour" type="Node" parent="."]
script = ExtResource("2_ovmnc")

[node name="BehaviourTimer" type="Timer" parent="Behaviour"]
wait_time = 30.0
autostart = true

[node name="HTTPRequest" type="HTTPRequest" parent="Behaviour"]

[node name="SpeechBox" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ColorRect" type="ColorRect" parent="SpeechBox"]
layout_mode = 2
color = Color(0.309804, 0.133333, 0, 0.67451)

[node name="MarginContainer" type="MarginContainer" parent="SpeechBox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="SpeechBox/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Speech" type="Label" parent="SpeechBox/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "I'm re."

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(1, 0.207843, 0.643137, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="DraggableArea" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_default_cursor_shape = 2

[node name="TheSprite" type="Sprite2D" parent="DraggableArea"]
unique_name_in_owner = true
position = Vector2(96, 92)
texture = ExtResource("2_h6co6")
